improve explanation of pre-training

--- a/mygpt.ipynb
+++ b/mygpt.ipynb
@@ -36,9 +36,9 @@
     "\n",
     "MyGPT finds the probable next character by learning patterns in text data\n",
     "\n",
-    "For example, given the sequence `multipl`, MyGPT will hopefully assign high probability to the characters `e`, `y`, and `i` because it is likely to find the words `multiple`, `multiply`, and `multipli`(cation) in its training data\n",
+    "For example, given the sequence `multipl`, MyGPT will ideally assign high probability to the characters `e`, `y`, and `i` because it is likely to find the words `multiple`, `multiply`, and `multipli`(cation) in its training data\n",
     "\n",
-    "It will hopefully assign low probability to the character `o` because it is unlikely to find `multiplo` in the training data"
+    "It will ideally assign low probability to the character `o` because it is unlikely to find `multiplo` in the training data"
    ]
   },
   {
@@ -84,7 +84,7 @@
     "vocab, vocab_size = create_vocabulary(raw_text)\n",
     "tokenizer = Tokenizer(vocab)\n",
     "\n",
-    "# tokenize the raw text in a data format that can be processed by the model\n",
+    "# encode the raw text to a data format that can be processed by MyGPT \n",
     "train_data, val_data = get_train_val_data(raw_text, tokenizer, device)"
    ]
   },
@@ -98,13 +98,13 @@
     "\n",
     "Here we initialize the MyGPT model, a Transformer. It can be thought of as a mathematical function that transforms an input sequence of characters down to a prediction of the next character\n",
     "\n",
-    "Given an input sequence `multipl`, the model might transform that sequence down to the letter `e`, to produce a likely word: `multiple`\n",
+    "Given an input sequence `multipl`, the model might transform that sequence down to the letter `e` to produce a likely word: `multiple`\n",
     "\n",
-    "MyGPT has a `context_length` of 64, meaning MyGPT can recall up to 64 characters to make predictions. Consider the following input sequence of 63 characters: `I have 3 dozen eggs. To find the total # of eggs I must multipl`\n",
+    "MyGPT can recall up to 64 characters to make predictions. This is what's called its `context_length`. Consider the following input sequence of 63 characters: `I have 3 dozen eggs. To find the total # of eggs I must multipl`\n",
     "\n",
-    "With this context, MyGPT should predict the letter `y` instead of `e`, because `I must multiply` makes more sense in this context than `I must multiple`\n",
+    "MyGPT should transform this input down to the letter `y` instead of `e` because `I must multiply` makes more sense in this context than `I must multiple`\n",
     "\n",
-    "For more details about the Transformer model, visit the [MyGPT/transformer.py file](MyGPT/transformer.py) to see a ~150 line implementation in PyTorch"
+    "For a better intuition about how the Transformer model is able to do this, visit the [MyGPT/transformer.py file](MyGPT/transformer.py) to see a ~150 line implementation in PyTorch"
    ]
   },
   {
@@ -140,7 +140,7 @@
     "\n",
     "Below, notice how at the beginning of the training loop, MyGPT produces unreadable text. But as the training continues, words start to form and the text becomes more human-like. By the 4,000th training iteration, the sampled text is mostly comprised of real words and even contains some coherent phrases\n",
     "\n",
-    "This is called \"pre\"-training because the model is only learning the structure of character sequences. Down the line, the model can be further trained to perform other interesting language processing tasks like summarization"
+    "**Side note:** This is called \"pre\"-training because this is an initial training loop that only teaches the model to piece together common character sequences. But down the line, the idea is to further train the model to try to perform more advanced language processing tasks like summarization"
    ]
   },
   {
@@ -316,8 +316,8 @@
     "The training loop performs the following computations:\n",
     "1. Take input sequences of characters and produce predictions of the next character\n",
     "2. Compare the predictions against the \"true\" next character\n",
-    "2. Measure how incorrect the predictions are, which we call the `loss`\n",
-    "3. Compute the gradient of the `loss` with respect to the model weights\n",
+    "3. Measure how incorrect the predictions are, which we call the `loss`\n",
+    "4. Compute the gradient of the `loss` with respect to the model weights\n",
     "5. Update the model weights in the direction of negative `loss`, to minimize the `loss`\n",
     "\n",
     "As the `loss` gets minimized, MyGPT's predictions become more correct\n",
