improve explanation of the transformer model

--- a/mygpt.ipynb
+++ b/mygpt.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# MyGPT\n",
     "\n",
-    "MyGPT is a next-character predictor. Given a sequence of characters, it predicts the likely next character\n",
+    "MyGPT is a next-character predictor. Given a sequence of characters, it predicts the next likely character\n",
     "\n",
     "```python\n",
     "\n",
@@ -36,9 +36,9 @@
     "\n",
     "MyGPT finds the probable next character by learning patterns in text data\n",
     "\n",
-    "For example, given the sequence `multipl`, MyGPT will ideally assign high probability to the characters `e`, `y`, and `i` because it is likely to find the words `multiple`, `multiply`, and `multipli`(cation) in its training data\n",
+    "For example, given the sequence `multipl`, MyGPT will ideally assign high probabilities to the characters `e`, `y`, and `i` because it is likely to find the words `multiple`, `multiply`, and `multipli`(cation) in its training data\n",
     "\n",
-    "It will ideally assign low probability to the character `o` because it is unlikely to find `multiplo` in the training data"
+    "It will ideally assign a low probability to the character `o` because it is unlikely to find `multiplo` in the training data"
    ]
   },
   {
@@ -140,7 +140,7 @@
     "\n",
     "Below, notice how at the beginning of the training loop, MyGPT produces unreadable text. But as the training continues, words start to form and the text becomes more human-like. By the 4,000th training iteration, the sampled text is mostly comprised of real words and even contains some coherent phrases\n",
     "\n",
-    "**Side note:** This is called \"pre\"-training because this is an initial training loop that only teaches the model to piece together common character sequences. But down the line, the idea is to further train the model to try to perform more advanced language processing tasks like summarization"
+    "**Side note:** This is called \"pre\"-training because this is an initial training loop that only teaches the model to piece together common character sequences. The model is not yet explicitly trained to perform more advanced language processing tasks like dialogue or summarization. Training for these complex tasks can be performed at a later time"
    ]
   },
   {
