make context_length analogy more concise

--- a/mygpt.ipynb
+++ b/mygpt.ipynb
@@ -423,25 +423,9 @@
     "\n",
     "But how did MyGPT generate so much text? Recall that MyGPT has a `context_length` of 64. This means MyGPT can take up to 64 characters into account to make a prediction. But this also means that when the prompt reaches 65 characters or greater, MyGPT no longer has enough room in its memory to process this entire prompt. It can no longer predict a new character. So how did it predict 2,000 characters?\n",
     "\n",
-    "Behind the scenes, when the prompt reaches 65 characters, the first character of the prompt is removed, allowing room for a new character to be appended. By doing this, it is in fact possible to continue text generation indefinitely. The limitation, though, is that the context with which predictions are made can only be 64 characters\n",
+    "Behind the scenes, when the prompt reaches 65 characters, the first character of the prompt is removed, allowing room for a new character to be appended\n",
     "\n",
-    "To illustrate this process of truncating the prompt, consider the following 64 character context:\n",
-    "\n",
-    "`Joe had 36 eggs, but ate 3. To find how many he has left, subtra`\n",
-    "\n",
-    "MyGPT might use this context to predict the letter `c`. To predict what comes after `c`, we add `c` to the context:\n",
-    "\n",
-    "`Joe had 36 eggs, but ate 3. To find how many he has left, subtrac`\n",
-    "\n",
-    "But this is now a 65 character context, which MyGPT cannot process. So we remove the first character `J` to maintain a 64 character context:\n",
-    "\n",
-    "`oe had 36 eggs, but ate 3. To find how many he has left, subtrac`\n",
-    "\n",
-    "This truncated context means MyGPT can no longer use the letter `J` to make a prediction, but the hope is that what remains is sufficient to predict the letter `t`. To predict what comes after `t`, we again remove the first character:\n",
-    "\n",
-    "`e had 36 eggs, but ate 3. To find how many he has left, subtract`\n",
-    "\n",
-    "This final context, which is missing `Jo` from the original context, can then be used to generate what comes after `subtract`"
+    "MyGPT is like a writer who can only remember the previous 64 characters when coming up with new things to write. When the text becomes larger than 64 characters, MyGPT \"forgets\" the earliest characters to make room for new ones. By forgetting old characters but remembering new ones, it is possible to continue generating text indefinitely"
    ]
   },
   {
