improve explanation of the transformer model

--- a/mygpt.ipynb
+++ b/mygpt.ipynb
@@ -106,7 +106,7 @@
     "\n",
     "Because MyGPT has a `context_length` of 64, it is able to take all 63 characters into account when transforming them down to a prediction of the next character. It should ideally predict the letter `y` instead of `e` because in this context, `I must multiply` makes more sense than `I must multiple`\n",
     "\n",
-    "For a better intuition about how the Transformer model is able to do this, visit the [MyGPT/transformer.py file](MyGPT/transformer.py) to see a ~150 line implementation in PyTorch"
+    "For a closer look at how the Transformer model is able to do this, visit the [MyGPT/transformer.py file](MyGPT/transformer.py) to see a ~150 line implementation in PyTorch"
    ]
   },
   {
