--- a/mygpt.ipynb
+++ b/mygpt.ipynb
@@ -419,7 +419,7 @@
    "source": [
     "### A note about the generated text\n",
     "\n",
-    "MyGPT took the input prompt `multiplic` and continued it with `ation`! Then, it generated other math words such as `exponentiated` and `matrices`, and also some closely sounding math non-words like `equivative` and `subtritute`. One can expect its performance to improve by increasing the training time and complexity of the Transfomer \"math model\"\n",
+    "MyGPT took the input prompt `multiplic` and continued it with `ation`! Then, it generated other math words such as `exponentiated` and `matrices`, and also some closely sounding math non-words like `equivative` and `subtritute`. One can expect its performance to improve by increasing the training time and complexity of the Transformer \"math model\"\n",
     "\n",
     "But how did MyGPT generate so much text? Recall that MyGPT has a `context_length` of 64. This means MyGPT can take up to 64 characters into account to make a prediction. But this also means that when the prompt reaches 65 characters or greater, MyGPT no longer has enough room in its memory to process this entire prompt. It can no longer predict a new character. So how did it predict 2,000 characters?\n",
     "\n",
